redacted-compiler-plugin/testData/diagnostic/AnnotatedValueProp.kt
// Copyright (C) 2025 Zac Sweers
// SPDX-License-Identifier: Apache-2.0
import kotlin.jvm.JvmInline

@JvmInline
value class <!REDACTED_ERROR!>AnnotatedValueProp<!>(@Redacted val a: Int)
